Constraintprog/minizinc-1.6/tests/flattening/test-abort7.mzn
% RUNS ON mzn2fzn

% Test abort/1.
%
var float: x = abort("This assignment aborts!");
solve satisfy;
